# vercel-rust-runtime

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json
api/: allocate.rs  simulate.rs  test.rs
app/: page.tsx
components/: LineChart.tsx  Slider.tsx  test-data.js
src/: lib.rs  main.rs
utils/: build-url.ts
